--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 body {
-    background-image: url(../img/3299923.jpg);
+    background-image: url(../img/office.jpg);
     background-position: center center;
     overflow: hidden;
     -webkit-background-size: cover;
