--- a/2023thef2e/mission1/sass/index.scss
+++ b/2023thef2e/mission1/sass/index.scss
@@ -1,18 +1,33 @@
 @import "../sass/normalize";
 @import "../sass/global";
+@import "../sass/main";
+@import "../sass/policy";
+@import "../sass/donate";
+
+:root {
+    scroll-padding-top: 104px;
+}
+
+html {
+    scroll-behavior: smooth;
+}
 
 body {
-    border: 5px solid $primary_color;
+    border-left: 5px solid $primary_color;
+    border-right: 5px solid $primary_color;
+    border-bottom: 5px solid $primary_color;
     box-sizing: border-box;
 }
 
 header {
+    border-top: 5.5px solid $primary_color;
     position: sticky;
-    top: 0;
+    top: -0.5px;
     background-color: white;
     width: 100%;
     padding: 20px 0;
     z-index: 10;
+    box-shadow: 0 1px 0 rgba($color: #000000, $alpha: 0.15);
 
     .header_block {
         max-width: 1200px;
@@ -30,30 +45,31 @@ header {
         display: flex;
         align-items: center;
         margin-right: 40px;
-
-        li {
-            cursor: pointer;
-            display: block;
-            padding: 0px 0;
-            margin: 0 20px;
-            box-sizing: border-box;
-            position: relative;
-
-            &.active {
-                &::after {
-                    content: '';
-                    position: absolute;
-                    transform: translateX(-50%);
-                    left: 50%;
-                    bottom: -10px;
-                    width: 100%;
-                    height: 3px;
-                    background-color: $primary_color;
-                }
-            }
-        }
     }
 
+    li {
+        cursor: pointer;
+        display: block;
+        padding: 0px 0;
+        margin: 0 20px;
+        box-sizing: border-box;
+        position: relative;
+
+        &.active::after, &:hover::after, &:active::after {
+            content: '';
+            position: absolute;
+            transform: translateX(-50%);
+            left: 50%;
+            bottom: -10px;
+            width: 100%;
+            height: 3px;
+            background-color: $primary_color;
+        }
+
+        a {
+            all: unset;
+        }
+    }
 
     button {
         outline: none;
@@ -62,6 +78,10 @@ header {
         border-radius: 30px;
         background-color: $primary_color;
 
+        a {
+            display: block;
+        }
+
         p {
             margin-left: 10px;
             font-size: 20px;
@@ -69,47 +89,15 @@ header {
     }
 }
 
-main {
-    background-color: #E3E3E3;
-}
-
 .container {
     max-width: 1200px;
     margin: 0 auto;
 }
 
-#main-view {
-    height: 684px;
-
-    img {
-        position: absolute;
-    }
-}
-
-#activity {
-    transform: translateY(-50%);
-    top: 24%;
-}
-
-#slogan {
-    transform: translateY(-50%);
-    top: 50%;
-}
-
-#chinese_name {
-    top: 30px;
-    right: 0;
-}
-
-#english_name {
-    left: 40px;
-    bottom: 30px;
-}
-
-#candidate {
-    top: 30px;
-    right: 70px;
-    z-index: 2;
+#mark {
+    position: absolute;
+    bottom: 0px;
+    left: 0;
 }
 
 #copywriting {
@@ -142,5 +130,15 @@ main {
 article {
     width: 100%;
     margin-right: 0;
-    height: 500px;
+    height: 408px;
+    position: relative;
+}
+
+#news {
+    padding: 50px 0;
+    text-align: center;
+
+    li {
+        display: block;
+    }
 }
