--- a/2023thef2e/mission1/sass/_donate.scss
+++ b/2023thef2e/mission1/sass/_donate.scss
@@ -1,4 +1,8 @@
 #donate {
+    @include mobile {
+        height: 140vw;
+    }
+
     height: 572px;
     position: relative;
 }
@@ -12,6 +16,11 @@
     left: 0;
     background: url(../image/bg-donate.svg) center right no-repeat;
     background-size: cover;
+
+    @include mobile {
+        background: url(../image/bg-donate.svg) center right 40% no-repeat;
+        background-size: cover;
+    }
 
     &::before {
         content: "";
@@ -34,4 +43,9 @@
     border-radius: 80px;
     padding: 30px;
     text-align: center;
+    @include mobile {
+        width: calc(100% - 100px);
+        transform: translate(-50%, -50%);
+        left: 50%;
+    }
 }
