--- a/2023thef2e/mission1/sass/index.scss
+++ b/2023thef2e/mission1/sass/index.scss
@@ -1,30 +1,43 @@
 @import "../sass/normalize";
 @import "../sass/global";
 @import "../sass/main";
+@import "../sass/news";
 @import "../sass/policy";
 @import "../sass/donate";
+@import "../sass/service";
 
 #logo {
-    @include mobile {
+    @include tablet {
         width: 150px;
         margin-left: 14px;
     }
 }
 
+#logo2 {
+    position: absolute;
+    transform: translateY(-50%);
+    top: 50%;
+
+    @include tablet {
+        display: none;
+    }
+}
+
 #menu {
     display: none;
-    @include mobile {
+    @include tablet {
+        display: block;
         margin-right: 14px;
     }
 }
 
 header {
-    border-top: 5.5px solid $primary_color;
+    border-top: 5px solid $primary_color;
     position: sticky;
     top: -0.5px;
     background-color: white;
-    width: 100%;
-    padding: 20px 0;
+    width: calc(100%);
+    padding: 15px 0;
     z-index: 10;
     box-shadow: 0 1px 0 rgba($color: #000, $alpha: 0.15);
 
@@ -36,7 +49,7 @@ header {
     }
 
     .header_menu {
-        @include mobile {
+        @include tablet {
             display: none
         };
     }
@@ -49,7 +62,7 @@ header {
     ul {
         display: flex;
         align-items: center;
-        margin-right: 40px;
+        margin-right: 20px;
     }
 
     li {
@@ -75,38 +88,20 @@ header {
             all: unset;
         }
     }
-
-    button {
-        outline: none;
-        border: none;
-        cursor: pointer;
-        border-radius: 30px;
-        background-color: $primary_color;
-
-        a {
-            display: block;
-        }
-
-        p {
-            margin-left: 10px;
-            font-size: 20px;
-        }
-    }
 }
-
 
 #mark {
     position: absolute;
     bottom: 0px;
     left: 0;
 
-    @include mobile {
+    @include tablet {
         width: 3vw;
     }
 }
 
 #copywriting {
-    @include mobile {
+    @include tablet {
         margin-top: 0;
         padding: 15px 15px 20px 18px;
         width: 80%;
@@ -114,20 +109,20 @@ header {
         box-shadow: -5px 5px 0 $primary_color;
     }
     margin-top: -2px;
-    width: 980px;
+    width: 80%;
+    max-width: 980px;
     border-radius: 80px 0 80px 0;
     background-color: white;
     padding: 40px 50px 50px 50px;
     border: 5px solid $primary_color;
     box-shadow: -15px 20px 0 $primary_color;
-    float: right;
 
     h1 {
         text-align: right;
         margin: 0 40px 15px 0;
-        font-size: 44px;
+        font-size: 2.75rem;
         color: #222;
-        @include mobile {
+        @include tablet {
             font-size: 20px;
             text-align: center;
             margin: 10px 0 0;
@@ -143,7 +138,7 @@ header {
         font-weight: 700;
         line-height: 36px;
 
-        @include mobile {
+        @include tablet {
             font-size: 15px;
             line-height: 22px;
             margin: 20px 0 0;
@@ -154,21 +149,91 @@ header {
 article {
     width: 100%;
     margin-right: 0;
-    height: 408px;
     position: relative;
-    @include mobile {
-        height: 90vw;
+}
+
+footer {
+    padding: 10px 0;
+    nav {
+        display: flex;
+        justify-content: right;
+        @include tablet {
+            justify-content: space-around;
+        }
+
+        @include mobile {
+            justify-content: center;
+            flex-direction: column;
+            padding-bottom: 20px;
+        }
+
+        h5 {
+            color: $tertiary_color;
+            text-align: center;
+            font-size: 13px;
+            line-height: 20px;
+        }
+
+        p {
+            color: white;
+            font-size: 15px;
+            line-height: 22px;
+            padding: 2px 0;
+        }
+
+        div {
+            margin-right: 50px;
+            @include tablet {
+                margin: 0;
+            }
+        }
+
+        ul {
+            display: grid;
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+            padding-inline-start: 0;
+        }
+
+        li {
+            text-align: center;
+            display: block;
+            cursor: pointer;
+            color: white;
+            font-size: 15px;
+            line-height: 22px;
+            padding: 2px 0;
+        }
+
+        a {
+            all: unset;
+        }
+    }
+
+    p {
+        margin: 0;
+        color: #999;
+        font-size: 13px;
+        line-height: 20px;
+        text-align: center;
     }
 }
 
-#news {
-    @include mobile {
-        display: none;
-    }
-    padding: 50px 0;
-    text-align: center;
+#cat {
+    width: 35vw;
+    position: absolute;
+    transform: translateX(-50%);
+    left: 30%;
+    top: -12.5vw;
+    z-index: 2;
 
-    li {
-        display: block;
+    @include mobile {
+        top: -33vw;
+        width: 90vw;
+        left: 50%;
     }
+
+}
+
+.lightbox {
+
 }
