--- a/2023thef2e/mission1/sass/index.scss
+++ b/2023thef2e/mission1/sass/index.scss
@@ -13,6 +13,16 @@
     }
 }
 
+#logo3 {
+    display: none;
+    @include tablet {
+        position: absolute;
+        left: 5%;
+        top: 24px;
+        width: 145px;
+    }
+}
+
 #logo2 {
     position: absolute;
     transform: translateY(-50%);
@@ -28,6 +38,14 @@
     @include tablet {
         display: block;
         margin-right: 14px;
+    }
+}
+
+#menu_close {
+    display: none;
+    @include tablet {
+        display: block;
+        padding: 14px 0 15px;
     }
 }
 
@@ -50,7 +68,14 @@ header {
 
     .header_menu {
         @include tablet {
-            display: none
+            position: fixed;
+            top: 0%;
+            left: 0;
+            z-index: 99;
+            width: 100%;
+            height: 100%;
+            background-color: $primary_color;
+            display: none;
         };
     }
 
@@ -62,7 +87,11 @@ header {
     ul {
         display: flex;
         align-items: center;
-        margin-right: 20px;
+        @include tablet {
+            flex-direction: column;
+            align-items: flex-end;
+            padding-right: 22px;
+        }
     }
 
     li {
@@ -72,6 +101,11 @@ header {
         margin: 0 20px;
         box-sizing: border-box;
         position: relative;
+
+        @include tablet {
+            color: white;
+            margin: 20px 0;
+        }
 
         &.active::after, &:hover::after, &:active::after {
             content: '';
@@ -88,15 +122,26 @@ header {
             all: unset;
         }
     }
+
+    button {
+        margin-left: 20px;
+
+        @include tablet {
+            margin-top: 20px;
+        }
+    }
 }
 
 #mark {
     position: absolute;
-    bottom: 0px;
+    bottom: -35px;
     left: 0;
+    width: 3.5vw;
 
     @include tablet {
-        width: 3vw;
+        bottom: unset;
+        top: -32vh;
+        width: 7vw;
     }
 }
 
